# Ethereal

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: class_screen.h.23689462DB24645C.idx  game.cpp.98572E7A40813148.idx  game.h.BDED3A8C2D834F1D.idx  game_state.cpp.075F7FE64D5D3CEC.idx  game_state.h.2CFA3909C4B9B73B.idx  gender_screen.h.23D0B9AEDA63BD23.idx  interface.cpp.431CE7C9F1EE98C9.idx  interface.h.87004298D10AD632.idx  interface_manager.cpp.A30E3DE71BF654FC.idx  interface_manager.h.049E3243E16F6051.idx  json_handler.cpp.17DE28DF88EE47EA.idx  json_handler.h.9B0951CFE41FC2D6.idx  main.cpp.CCD05AFDF16FD5B6.idx  name_screen.h.4CE96CEDA3F1C110.idx  nholmann_json.h.D083183E8EA4060A.idx  player_state.cpp.65B572B7FB7F1E4F.idx  species_screen.h.56AFE31A9FDECB26.idx  title_screen.h.0C1BF841DC89C83A.idx
resources/data/: classes.json  species.json  style.json
src/ECS/components/: component_manager.h
src/ECS/components/components/: component.h
src/ECS/components/components/entity/: player_component.h
src/ECS/entities/: entity.h  entity_manager.h
src/ECS/systems/: system_manager.h
src/ECS/systems/systems/: system.h
src/game/: game.cpp  game.h
src/interface/interface/: interface.cpp  interface.h
src/interface/manager/: interface_manager.h
src/interface/panels/main_menu/: class_screen.h  gender_screen.h  name_screen.h  species_screen.h  title_screen.h
src/json/: json_handler.cpp  json_handler.h
src/states/game_state/: game_state.cpp  game_state.h
